# 2023z-sdp

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose.yml.template
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.json  postman_collection.json
backend/config/: app.json
backend/devkeys/: jwt-auth-rsa.key.pub  priv.pem
backend/migrations/: 001__unique_indices.surrealql  1_unique_sample_names.surrealql  2_unique_experiment_sample.surrealql  3_unique_experiment_names.surrealql  V1__initial.sql  V2__update_date.sql  V3__attachments.sql  V4__roles.sql  V5__version_graph.sql  V6__version_states.sql  V7__unique_documents.sql  V8__version_comments.sql  V9__document_sets.sql
backend/seeding/: admin.sql  dummy1_documents.sql  dummy2_document_sets.sql
backend/src/: main.rs
backend/src/routing/: healthcheck.rs  mod.rs  static_files.rs
backend/src/routing/api/: audio.rs  auth.rs  experiments.rs  mod.rs
backend/src/routing/api/auth/: login.rs  mod.rs
backend/src/services/: app.rs  config.rs  file_storage.rs  mod.rs  runner.rs  signals.rs  tracing.rs  util.rs
backend/src/services/auth/: claims.rs  error.rs  mod.rs
backend/src/services/database/: Dockerfile  SCHEMA.md  docker-compose.yml  error.rs  files.rs  identified.rs  migrations.rs  migrator.rs  mod.rs  surreal.rs
backend/src/services/database/repositories/: audio.rs  experiment.rs  mod.rs  user.rs  (+1 more)
backend/src/services/repositories/: experiment.rs  mod.rs  sample.rs  user.rs
backend/static/: index.html
(+45 files in other folders)
