[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["MiniaczQ", "MortonPL"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
jsonwebtoken = "9.2.0"
once_cell = "1.17.1"
serde_json = "1.0.95"
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
mime = "0.3.17"
lazy_static = "1.4.0"
regex = "1.8.4"
validator = { version = "0.16.1", features = ["derive"] }
axum = { version = "0.7.2", features = ["macros"] }
chrono = { version = "0.4.24", features = ["serde"] }
config = { version = "0.13.3", default-features = false, features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
tower-http = { version = "0.5.0", features = ["trace", "fs", "cors"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
tokio = { version = "1.27.0", features = [
    "macros",
    "signal",
    "rt-multi-thread",
] }
utoipa = { version = "4.1.0", features = ["uuid", "chrono"] }
utoipauto = "0.1.1"
axum-extra = { version = "0.9.0", features = [
    "multipart",
    "typed-header",
    "cookie",
] }
thiserror = "1.0.50"
hyper-util = { version = "0.1.1", features = ["tokio"] }
hyper = "1.0.1"
bytes = { version = "1.5.0", features = ["serde"] }
surrealdb = { version = "1.0.0", features = ["kv-rocksdb", "kv-mem"] }
sha3 = "0.10.8"

[profile.release]
strip = true
